# OpenGL_Workbench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp  main2.cpp
demos/: imgui_demo.cpp
include/: BasicMesh.h  BasicMeshEntry.h  CubeMapFBO.h  GraphicUserInterface.h  InputProcessor.h  Light.h  Material.h  OpenglLoader.h  Plane.h  Program.h  SceneFBO.h  ShaderProgram.h  ShaderTypeEnum.h  ShadowCubeMapFBO.h  Skybox.h  Texture.h  Transformable.h  ViewCamera.h  WindowManager.h  World.h  headers.h
include/headers/: headers.h
shaders/core/: fragment.frag  vertex.vert
shaders/include/: phong.glsl
shaders/particle_billboard/: sample.frag  sample.geom
shaders/plain/: fragment.frag  vertex.vert
shaders/reflect/: reflect.frag  reflect.vert
shaders/refraction/: refract.frag  refract.vert
shaders/shadow/: light_pass.frag  light_pass.vert  shadow.vert  shadow_pass.frag  shadow_pass.vert
shaders/skybox/: skybox.frag  skybox.vert
src/: BasicMesh.cpp  CubeMapFBO.cpp  GraphicUserInterface.cpp  InputProcessor.cpp  Light.cpp  Material.cpp  Plane.cpp  Program.cpp  SceneFBO.cpp  ShaderProgram.cpp  ShadowCubeMapFBO.cpp  Skybox.cpp  Texture.cpp  Transformable.cpp  ViewCamera.cpp  WindowManager.cpp  World.cpp  main.cpp  noc_file_dialog.cpp  stb_image.cpp  stb_particle_system.cpp
